- Created `loadCachedNetworks()` function to load cached networks on application startup
- Created `saveCachedNetworks()` function to save networks after successful scans
- Modified `initialModel()` to load cached networks at startup for instant display

### Scanning Indicator
- Modified `headerView()` to display a spinner between "Network Manager" and "Wi-Fi:<status>" when scanning
- Changed spinner type from `spinner.Globe` to `spinner.Dot` for better visual appearance

## Phase 3: Bug Fixes (Network Disappearing During Scan)

### Network Persistence During Scanning
- Removed conditional hiding of network list when `isLoading=true` in the `View()` function
- Modified `wifiListLoadedMsg` handler to ignore empty scan results and keep `isScanning=true`
- Modified `knownNetworksMsg` handler to preserve cached networks during scanning state
- Removed `m.processAndSetWifiList([])` call that was clearing networks on refresh

## Phase 4: Code Cleanup & Quality Improvements

### Removed Unused Code
- Deleted `knownWifiApsListMsg` type
- Removed `connectionProfileToWifiAP()` function
- Removed `fetchKnownWifiApsCmd()` function

### Fixed Lint Warnings
- Removed redundant nil checks
- Eliminated redundant state condition checks in `View()` switch statement

### UI Fixes
- Fixed signal strength display from double percent signs (`%%`) to single (`%`)

## Phase 5: Documentation Updates

### README.md Changes
- Removed GitHub release badges and links
- Added Go 1.21+ requirement
- Replaced installation section with "Building from Source" instructions
- Removed "Release Process" section about GoReleaser
- Added credit note acknowledging `doeixd` as the original creator with a link to their repository

## Additional Features

### Network Deduplication
- Implemented deduplication of networks by SSID, keeping the one with the strongest signal
- Modified `getAllWifiItems()` to consolidate duplicate access points
- Updated filtering logic to work with deduplicated list
